# MyZip

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
inc/mzip/: args.h  constant.h  minheap.h  print.h  util.h  vprint.h
src/: CMakeLists.txt  main.c  minheap.c  util.c
test/: CMakeLists.txt  test_sanity.c
